--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
                 </div>
                 <div class="bilibili-placeholder">
                     <i class="fas fa-link fa-2x mb-4" style="color: #fb7299;"></i>
-                    <h3>此处填写您的B站主页链接</h3>
-                    <p class="mt-4">将您的B站主页链接放置在此处</p>
+                    <h3>https://space.bilibili.com/3546716410218699</h3>
+                    <p class="mt-4">https://space.bilibili.com/3546716410218699</p>
                 </div>
             </div>
         </div>
@@ -616,4 +616,5 @@
         checkScroll();
     </script>
 </body>
+
 </html>
